# DevelopCpp

./: .gitignore  CMakeLists.txt  README.md  settings.json
0.Doc/: SourceList.md
1.SoftwareConfig/Cuda/: cuda.md
1.SoftwareConfig/Git/: GitLabInstall.md  git.md
1.SoftwareConfig/VsCode/Plugin/: PluginInstallList.md
1.SoftwareConfig/VsCode/json/: cpp.json  cuda.json  python.json  settings.json
2.CodingStyle/: .clang-format  C++Style.md  CodeReview.md  file_note.h  file_note.md  file_type.md  glog.md  gtest.md
3.Build/: CMake.md  README.md
3.Build/CMake/: CMakeLists.txt
3.Build/CMake/Doc/: cmake.md  cmake_install.md  cmake_set.md  cmake_target.md
3.Build/CMake/Test/: CMakeLists.txt
3.Build/CMake/include/: add.h
3.Build/CMake/src/: add.cpp  main.cpp
3.Build/SharedLibrary/: SharedLibrary.md
3.Build/SharedLibrary/Module/: CMakeLists.txt
3.Build/SharedMemory/Module/include/: add.h
4.Shell/bat/: bat.md
4.Shell/bat/Demo/: autorun.bat
4.Shell/shell/: shell.md
4.Shell/shell/Doc/: grep.md  sed.md  shell.md
4.Shell/shell/src/: shell_loop.sh
5.C++/DesignModel/: CMakeLists.txt
5.C++/DesignModel/Factory/: Factory.md
5.C++/DesignModel/ProducerConsumer/: CMakeLists.txt
5.C++/DesignModel/ProducerConsumer/Doc/: producer_consumer.md
5.C++/DesignModel/ProducerConsumer/src/: producer_consumer.cpp
5.C++/DesignModel/ProducerConsumer/test/: ut_producer_consumer.cpp
5.C++/cast/: CMakeLists.txt
5.C++/cast/src/: cxx_cast.cpp
5.C++/std_function/: C++ 函数包装器function.pptx
5.C++/std_function/src/: std_function.cpp
5.DesignModel/Singleton/: Singleton.md
6.CUDA/Thrust/: CMakeLists.txt  cu_thrust_demo.cu
6.CUDA/cuBLAS/: CMakeLists.txt  cu_blas_demo.cu
6.CUDA/cuFFT/: CMakeLists.txt  cu_fft_demo.cu
6.ThirdParty/: CMakeLists.txt
6.ThirdParty/Config/: CMakeLists.txt
6.ThirdParty/Config/JSON/: CMakeLists.txt
6.ThirdParty/Config/JSON/src/: demo.cpp
6.ThirdParty/Google/: CMakeLists.txt  glog.md
6.ThirdParty/Google/glog/: CMakeLists.txt  main.cpp
6.ThirdParty/Google/glog/include/glog/: logging.h
6.ThirdParty/Google/gtest/: test.h
7.Math/: CMakeLists.txt  math.h
7.Math/Conv/: CMakeLists.txt
7.Math/Conv/include/: conv.cuh  conv.h
7.Math/Conv/src/: conv.cpp  conv.cu
7.Math/Conv/test/: ut_conv.cpp
7.Math/include/: imath.h  istring.h  math.h
7.Math/include/macro/: cuda_check.h
8.ThirdParty/Config/: Config.md
8.ThirdParty/Config/XML/: CMakeLists.txt
8.ThirdParty/Config/XML/include/: configure.h
8.ThirdParty/Config/XML/src/: configure.cpp
8.ThirdParty/Google/glog/: main.cpp
8.ThirdParty/Google/gtest/: CMakeLists.txt  main.cpp
vscode/: cpp.json  settings.json
